--- a/n113a_Data_Wrangling(1)_ipynb의_사본.ipynb
+++ b/n113a_Data_Wrangling(1)_ipynb의_사본.ipynb
@@ -99,14 +99,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 60,
       "metadata": {
         "id": "e-Cvv0dTS49W",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "60b5667d-c8dc-4cc9-95c1-2bb9c5d087ce"
+        "outputId": "8d7c3c14-8039-4210-d952-54dbeaf1b679"
       },
       "outputs": [
         {
@@ -117,9 +117,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-abc3b20c-e2e4-4e53-a5f6-d8d778d84225\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-4df106c4-9d65-44d6-8179-d49cd0c183ae\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-abc3b20c-e2e4-4e53-a5f6-d8d778d84225\">\n",
+              "     <output id=\"result-4df106c4-9d65-44d6-8179-d49cd0c183ae\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -307,7 +307,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving movie.csv to movie.csv\n"
+            "Saving movie.csv to movie (1).csv\n"
           ]
         },
         {
@@ -318,7 +318,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 60
         }
       ],
       "source": [
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "EJTSHIponZ3P"
       },
-      "execution_count": null,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -365,9 +365,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "563557b7-e9fc-4dbe-8f68-0d47e1861fd3"
+        "outputId": "ae717dc7-bfa0-49ae-dd07-8f0bfdd3da02"
       },
-      "execution_count": null,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -423,7 +423,7 @@
       "cell_type": "code",
       "source": [
         "error = Movie[Movie.Released_Year.str.contains(r'[^0-9]')]\n",
-        "error"
+        "error\n"
       ],
       "metadata": {
         "colab": {
@@ -431,9 +431,9 @@
           "height": 206
         },
         "id": "JzUC1_c9u45L",
-        "outputId": "bed12aba-e580-40c5-f742-07392219cf36"
+        "outputId": "bf512900-de07-406f-f674-89dcf830cff2"
       },
-      "execution_count": 15,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -469,7 +469,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af47f149-5d49-4378-9404-279b936ddcef\">\n",
+              "  <div id=\"df-499f7052-8e13-4cd9-8113-0798db24a025\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -606,7 +606,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af47f149-5d49-4378-9404-279b936ddcef')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-499f7052-8e13-4cd9-8113-0798db24a025')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -657,12 +657,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-af47f149-5d49-4378-9404-279b936ddcef button.colab-df-convert');\n",
+              "          document.querySelector('#df-499f7052-8e13-4cd9-8113-0798db24a025 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-af47f149-5d49-4378-9404-279b936ddcef');\n",
+              "          const element = document.querySelector('#df-499f7052-8e13-4cd9-8113-0798db24a025');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -685,7 +685,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 67
         }
       ]
     },
@@ -701,29 +701,47 @@
     {
       "cell_type": "code",
       "source": [
-        "Movie = Movie[Movie.Released_Year.str.contains(r'[^0-9]')].drop_duplicates()\n",
-        "Movie = Movie.reset_index(drop=True)\n",
-        "\n",
-        "Movie['Released_Year'].duplicated().sum()\n"
+        "error = Movie[Movie.Released_Year.str.contains(r'[^0-9]')].index\n",
+        "Movie.drop(error, inplace= True)\n",
+        "Movie.info()"
       ],
       "metadata": {
-        "id": "lSRKCbj4Dsay",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4f85eea3-5e9b-409f-8db7-1b17b89487a6"
+        "id": "JoAeLgq4PaL0",
+        "outputId": "883d7695-6ac0-43a1-ae35-599a535a69dc"
       },
-      "execution_count": 25,
+      "execution_count": 74,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 995 entries, 0 to 999\n",
+            "Data columns (total 16 columns):\n",
+            " #   Column         Non-Null Count  Dtype  \n",
+            "---  ------         --------------  -----  \n",
+            " 0   Poster_Link    995 non-null    object \n",
+            " 1   Series_Title   995 non-null    object \n",
+            " 2   Released_Year  995 non-null    object \n",
+            " 3   Certificate    895 non-null    object \n",
+            " 4   Runtime        995 non-null    object \n",
+            " 5   Genre          995 non-null    object \n",
+            " 6   IMDB_Rating    995 non-null    float64\n",
+            " 7   Overview       995 non-null    object \n",
+            " 8   Meta_score     841 non-null    float64\n",
+            " 9   Director       995 non-null    object \n",
+            " 10  Star1          995 non-null    object \n",
+            " 11  Star2          995 non-null    object \n",
+            " 12  Star3          995 non-null    object \n",
+            " 13  Star4          995 non-null    object \n",
+            " 14  No_of_Votes    995 non-null    float64\n",
+            " 15  Gross          827 non-null    object \n",
+            "dtypes: float64(3), object(13)\n",
+            "memory usage: 164.4+ KB\n"
+          ]
         }
       ]
     },
