--- a/n121a_Bayesian_Inference_ipynb의_사본.ipynb
+++ b/n121a_Bayesian_Inference_ipynb의_사본.ipynb
@@ -501,10 +501,25 @@
         "math / enroll"
       ],
       "metadata": {
-        "id": "crp7GAEFcX5p"
+        "id": "crp7GAEFcX5p",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2ed3909-9fe9-4377-a9ad-76ead98f2a8d"
       },
-      "execution_count": 22,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -554,13 +569,28 @@
         "correct_know = 1\n",
         "\n",
         "# 사후확률\n",
-        "(correct_know * know) / ((correct_know * know) + (correct_dontknow * dontknow))"
+        "round((correct_know * know) / ((correct_know * know) + (correct_dontknow * dontknow)),2)"
       ],
       "metadata": {
-        "id": "gsEl0EXeQxGs"
+        "id": "gsEl0EXeQxGs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "553f82ad-2a6d-40b8-a026-5f5d02496f22"
       },
-      "execution_count": 23,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.68"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -588,15 +618,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 7,
       "metadata": {
-        "id": "1ZgvQaQc78n5"
+        "id": "1ZgvQaQc78n5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa8d54ab-e3c4-4342-a33c-c1c02ece111c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.91"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
-        "사전확률과 데이터를 바탕으로 사용자 정의 함수 disease_test(tpr, fpr, prior)를 완성하세요.\n",
+        "#사전확률과 데이터를 바탕으로 사용자 정의 함수 disease_test(tpr, fpr, prior)를 완성하세요.\n",
         "\n",
         "# 사전확률\n",
+        "tpr=0.9\n",
+        "fpr=0.01\n",
+        "prior=0.1\n",
+        "\n",
         "disease = prior\n",
         "healthy = 1 - prior\n",
         "\n",
@@ -605,7 +654,8 @@
         "pos_healthy = fpr\n",
         "\n",
         "# 사후확률\n",
-        "posterior = (pos_disease * disease) / ((pos_disease * disease) + (pos_healthy * healthy))"
+        "posterior = (pos_disease * disease) / ((pos_disease * disease) + (pos_healthy * healthy))\n",
+        "round(posterior,2)"
       ]
     },
     {
@@ -649,13 +699,29 @@
         "left_guilty = 1\n",
         "\n",
         "# 사후확률\n",
-        "(left_guilty * guilty) / ((left_guilty * guilty) + (left_notguilty * notguilty))"
+        "p=(left_guilty * guilty) / ((left_guilty * guilty) + (left_notguilty * notguilty))\n",
+        "round(p,2)"
       ],
       "metadata": {
-        "id": "t2vBbDKoyoqq"
+        "id": "t2vBbDKoyoqq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "276d7a55-4eba-4ea9-bbd2-0b1d27a3125c"
       },
-      "execution_count": 25,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.88"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
